# pymmcore-nano

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  justfile  meson.build  meson_options.txt  mkdocs.yml  patch_c14_c17.py  pyproject.toml  x.py
.github/workflows/: ci.yml  deploy.yml  docs.yml
docs/: api.md  index.md
docs/css/: material.css
scripts/: build_stubs.py  extract_version.py  generate_dist.py  patch_c14_c17.py  patch_sources.py  update_sources.py
src/: DeviceHandle.cpp  DeviceHandle.h  _pymmcore_nano.cc  _pymmcore_nano.pyi  lib.cc
src/mmCoreAndDevices/: README.md
src/mmCoreAndDevices/DeviceAdapters/DemoCamera/: meson.build
src/mmCoreAndDevices/DeviceAdapters/DemoCamera/subprojects/: catch2.wrap
src/mmCoreAndDevices/DeviceAdapters/Go2Scope/: AcqZarrStorage.cpp  G2SBigTiffDataset.cpp  G2SBigTiffStream.cpp  G2SStorage.cpp  meson.build
src/mmCoreAndDevices/DeviceAdapters/Go2Scope/subprojects/: acquire-zarr.wrap
src/mmCoreAndDevices/DeviceAdapters/SequenceTester/: meson.build
src/mmCoreAndDevices/DeviceAdapters/SequenceTester/subprojects/: msgpack-cxx.wrap
src/mmCoreAndDevices/DeviceAdapters/Utilities/: meson.build
src/mmCoreAndDevices/MMCore/: CircularBuffer.cpp  CircularBuffer.h  ConfigGroup.h  Configuration.cpp  Configuration.h  CoreCallback.cpp  MMCore.cpp  MMCore.h  MMEventCallback.h  Semaphore.cpp  Semaphore.h  Task.h  TaskSet_CopyMemory.h  ThreadPool.h  meson.build
src/mmCoreAndDevices/MMDevice/: Debayer.cpp  Debayer.h  DeviceThreads.h  ImageMetadata.h  meson.build
src/pymmcore_nano/: __init__.py  _pymmcore_nano.pyi
tests/: conftest.py  test_callbacks.py  test_core.py  test_device_object.py  test_image.py
tests/adapters/darwin/: libmmgr_dal_DemoCamera  libmmgr_dal_Utilities
tests/adapters/win32/: TIMESTAMP
