option(
    'hold_gil',
    type: 'boolean',
    value: false,
    description: 'Define HOLD_GIL for controlling GIL behavior.  By default, the GIL is released during the vast majority of C++ calls.  This can be disabled by setting this option.',
)
option(
    'match_swig',
    type: 'boolean',
    value: true,
    description: 'Define MATCH_SWIG, to export all enum instances as top level names'
)
