option(
    'hold_gil',
    type: 'boolean',
    value: false,
    description: 'Define HOLD_GIL for controlling GIL behavior.  By default, the GIL is released during the vast majority of C++ calls.  This can be disabled by setting this option.',
)
option(
    'match_swig',
    type: 'boolean',
    value: true,
    description: 'Define MATCH_SWIG, to export all enum instances as top level names'
)
option('tests', type: 'feature', value: 'enabled',
    description: 'Build unit tests',
)
option('client_interface', type: 'boolean', value: false,
    description: 'Build for use by MMCore, as opposed to by a device adapter',
)
option('tests', type: 'feature', value: 'enabled', yield: true,
    description: 'Build unit tests',
)
