[build-system]
requires = [
    'meson-python',
    'nanobind',          # for stubgen
    'typing_extensions', # for stubgen (should be declared by nanobind)
    'ruff',              # for stubgen
]
build-backend = 'mesonpy'

[project]
name = "pymmcore-nano"
requires-python = ">=3.10"
dynamic = ['version']
description = "CMMCore wrapper for Python, using nanobind"
readme = "README.md"
dependencies = ["numpy"]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "meson-python>=0.17.1",
    "nanobind",
    "mypy>=1.13.0",
    "ninja>=1.11.1.2",
    "pdbpp>=0.10.3; sys_platform != 'win32'",
    "pre-commit>=4.0.1",
    "pytest>=8.0",
    "ruff>=0.8.0",
    "pytest-cov>=6.0.0",
    "gcovr>=8.2",
    "rich>=13.9.4",
]

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
omit = ['subprojects/']
source = ["pymmcore_nano", "mmCoreAndDevices"]
