[build-system]
requires = [
    'meson-python',
    'nanobind',          # for stubgen
    'typing_extensions', # for stubgen (should be declared by nanobind)
    'ruff',              # for stubgen
]
build-backend = 'mesonpy'

[project]
requires-python = ">=3.9"
name = "pymmcore-nano"
dynamic = ['version']
description = "Alternative python bindings for MMCore, Micro-Manager's device control layer"
readme = "README.md"
license = { text = "LGPL-2.1-only" }
authors = [
    { name = "Micro-Manager Team" },
    { name = "Mark Tsuchida", email = "marktsuchida@gmail.com" },
    { name = "Talley Lambert", email = "talley.lambert@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.25"]

[dependency-groups]
dev = [
    "clang-format>=19.1.7",
    "gcovr",
    "ipython",
    "meson-python",
    "mypy",
    "nanobind",
    "ninja",
    "pdbpp; sys_platform != 'win32'",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "rich",
    "ruff",
    "rust-just",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.16.0",
    "mkdocs-material>=9.6.4",
    "mkdocs-minify-plugin>=0.8.0",
]

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true

[tool.coverage.run]
omit = ['subprojects/']
source = ["pymmcore_nano", "mmCoreAndDevices"]

[tool.cibuildwheel]
build-verbosity = 1
# Skip 32-bit builds, musllinux, and PyPy wheels on all platforms
# Note: use of PTHREAD_MUTEX_RECURSIVE_NP in DeviceThreads.h
# is specific to glibc and not available in musl-libc
skip = ["*-manylinux_i686", "*-musllinux*", "*-win32", "pp*"]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
test-requires = "pytest"
test-command = 'pytest "{project}/tests" -v'
test-skip = ["*-macosx*", "*linux*"]                           # until we build device adapters locally

[tool.cibuildwheel.macos]
# https://cibuildwheel.readthedocs.io/en/stable/faq/#apple-silicon
archs = ["x86_64", "arm64"]
# Needed for full C++17 support on macOS
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }
