mmdevice_dep = dependency('mmdevice_dep')
msgpack_cxx_dep = dependency('msgpack-cxx')
boost_dep = dependency('boost', modules: ['thread', 'system'], include_type: 'system')

library(
    'mmgr_dal_SequenceTester',
    sources: [
        'InterDevice.cpp',
        'LoggedSetting.cpp',
        'SequenceTester.cpp',
        'SettingLogger.cpp',
        'TextImage.cpp',
        'TriggerInput.cpp',
    ],
    dependencies: [mmdevice_dep, msgpack_cxx_dep, boost_dep],
    cpp_args: [
        '-Wno-unused-but-set-variable',
        '-Wno-reorder',
        '-Wno-unused-private-field',
    ],
)

